--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,8 @@
 <nav>
 	<ul>
 		<li><a href="/">Home</a></li>
-		<li><a href="/about">Home</a></li>
+		<li><a href="/about">About</a></li>
+		<li><a href="/instagram">Instagram</a></li>
 	</ul>
 </nav>
 <div class="container">
