--- a/templates/header.html
+++ b/templates/header.html
@@ -16,9 +16,9 @@
             <ul class="nav navbar-nav navbar-right">
                 <li><a href="#/services">Services</a>
                 </li>
-                <li><a href="#/pricing">Pricing Table</a>
+                <li><a href="/pricing">Pricing Table</a>
                 </li>
-                <li><a href="#/about">About</a>
+                <li><a href="/about">About</a>
                 </li>
                 <li><a href="#/faq">FAQ</a>
                 </li>
